--- a/whatis.html
+++ b/whatis.html
@@ -28,7 +28,7 @@
                         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="home.html">Assump Chana</a>
+                    <a class="navbar-brand" href="index.html">Assump Chana</a>
                 </div>
                 <!-- LOGIN BUTTON-->
                 <a>
