--- a/contractus.html
+++ b/contractus.html
@@ -10,8 +10,7 @@
     <script src="https://kit.fontawesome.com/902145a1a9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>ติดต่อเรา</title>
-
-    <style>
+S    <style>
         body {
             background-color: #F8D568;
         }
@@ -58,7 +57,7 @@
                         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="home.html">Assump Chana</a>
+                    <a class="navbar-brand" href="index.html">Assump Chana</a>
                 </div>
                 <!-- LOGIN BUTTON-->
                 <a>
