--- a/login.html
+++ b/login.html
@@ -122,7 +122,7 @@
 
           // Signed in 
           alert('ยินดีต้อนรับสู่ Assump Chana')
-          window.location.href = 'home.html'
+          window.location.href = 'index.html'
           // ...
         })
         .catch((error) => {
